--- a/src/index.css
+++ b/src/index.css
@@ -404,4 +404,7 @@ nav a {
 
 .dsc-dialog-btn-container {
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
 }
